*** 20000907_1 by bill

Fixed the small bug with nick,nick,nick.


*** 20000901_1 by lusky
revved patchlevel to rc5
added canonize() call in m_message if NO_DUPE_MULTI_MESSAGES is defined


*** 20000824_4 by lusky
- removed trailing ')' from channel +/-j oper notices


*** 20000824_3 by lusky
- glines were not matched properly for unidented clients


*** 20000824_2 by lusky
- changed Q:line behaviour for NICKs to just return ERR_ERRONEUSNICKNAME


*** 20000824_1 by lusky
- server_estab() - mask IP in the op notices, but log the real ip
- disable wildcards in WHOIS (configurable for now)
- DLPATH didn't get loaded on REHASH


*** 20000822_1 by lusky
added support for CIDR IP tklines, just like normal klines


*** 20000821_2 by lusky
kludge to fix an I: bug where blah.foo.com could match I:nomatch::foo.com


*** 20000821_1 by lusky
fix for stats by a server causing a core


*** 20000820_1 by lusky
first shot at fixing a really old bug with USE_POLL that would cause the
  server to not parse queued commands until there was additional activity
  on the descriptor.


*** 20000812_2 by lusky
yet another test commit


*** 20000812_1 by lusky

*** 20000809_2 by lusky
changed the sendto_ops to sendto_realops for dupe gline votes (gp)
add G to the version flags to indicate G-line capability (gp)


*** 20000809_1 by lusky
revved patchlevel to rc4
syslog() format fix (wnder)
mod to clean_string() to display ctrl chars as \xxx


*** 20000719_1 by lusky
fixed check for valid chars in m_links()
fixed high char handling in clean_string() (db)
fix for core on malformed O/o line (db)
fixed a buffer size in m_server() and m_links() (db)
revved patchlevel to rc3


*** 20000626_2 by lusky
ghost kill fix


*** 20000626_1 by lusky
revved patchlevel to rc2
added db's I-line patch that was supposed to have been in rc1


*** 20000621_2 by lusky
more cygwin install fixes


*** 20000621_1 by lusky
revved patchlevel to rc1
fixes for ip_ilines (db)
fixes and notes for cygwin