@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_message.c,v 1.8 2000/09/02 03:42:12 lusky Exp $
+ *   $Id: m_message.c,v 1.9 2000/09/07 22:32:33 bill Exp $
  */
 #include "m_commands.h"
 #include "client.h"
@@ -148,11 +148,6 @@ static  int     m_message(struct Client *cptr,
 #endif
 #endif
 #ifdef NO_DUPE_MULTI_MESSAGES
-      if (strchr(parv[1],','))
-        parv[1] = canonize(parv[1]);
-#endif
-    }
-
   /* function to fix nick,nick,nick bug.  this will remove duped targets
      to cut down on flooding a little bit.
 	-pro
@@ -160,6 +155,8 @@ static  int     m_message(struct Client *cptr,
 
   nick = (char *) malloc(1024);
   fix_message_target(parv[1], nick);
+#endif
+    }
 
   /*
   ** channels are privmsg'd a lot more than other clients, moved up here
