@@ -1,3 +1,8 @@
+*** 20000907_2 by bill
+
+Oops.  Forgot to remove canonize() and place function call in the #ifdef.
+
+
 *** 20000907_1 by bill
 
 Fixed the small bug with nick,nick,nick.
